--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database connection settings
 spring.datasource.url=jdbc:mysql://localhost:3306/techjobs
-spring.datasource.username=techpersist
-spring.datasource.password=wonderfulpass1234
+spring.datasource.username=techjobs
+spring.datasource.password=techjobs
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
